{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 194,
  "lineage": "bd018d48-51a9-eed2-17ec-74c6d598e35a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-015af137aeb579413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "web2"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-08495a470b4c5281e"
                ]
              }
            ],
            "id": "subnet-015af137aeb579413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "web2"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e6efaf93d85776",
            "arn": "arn:aws:ec2:us-east-2:694448848887:instance/i-044862a9024a04d66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044862a9024a04d66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "key-gen2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c0cfe56baf6afc7",
            "private_dns": "ip-10-0-1-27.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.27",
            "public_ip": "13.58.191.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089e955027803b5d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015af137aeb579413",
            "tags": {
              "Name": "NULL_instance"
            },
            "tags_all": {
              "Name": "NULL_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c99c3275947336fe"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_ami.sri_ami",
            "data.aws_subnet.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sri_gt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:internet-gateway/igw-0dff8c69dec3c0e06",
            "id": "igw-0dff8c69dec3c0e06",
            "owner_id": "694448848887",
            "tags": {
              "Name": "mygateway"
            },
            "tags_all": {
              "Name": "mygateway"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sri_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:route-table/rtb-0f3fec6bbce51bfac",
            "id": "rtb-0f3fec6bbce51bfac",
            "owner_id": "694448848887",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.sri_sub",
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sri_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:route-table/rtb-09a2ec61f406a3420",
            "id": "rtb-09a2ec61f406a3420",
            "owner_id": "694448848887",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dff8c69dec3c0e06",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sri_gt",
            "aws_subnet.sri_sub",
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abf188fa8e5ebc82",
            "route_table_id": "rtb-0f3fec6bbce51bfac",
            "subnet_id": "subnet-06c3d8519ae59e8bb"
          },
          "dependencies": [
            "aws_route_table.sri_rt_private",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f957d290c4cb7cae",
            "route_table_id": "rtb-0f3fec6bbce51bfac",
            "subnet_id": "subnet-01c8d4e31491a2507"
          },
          "dependencies": [
            "aws_route_table.sri_rt_private",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b386c845cb706b63",
            "route_table_id": "rtb-0f3fec6bbce51bfac",
            "subnet_id": "subnet-0ea1eebc51f829b84"
          },
          "dependencies": [
            "aws_route_table.sri_rt_private",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033cbcd5b2af8b981",
            "route_table_id": "rtb-0f3fec6bbce51bfac",
            "subnet_id": "subnet-0772a3c32c7cb72d3"
          },
          "dependencies": [
            "aws_route_table.sri_rt_private",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c53a75dc2b487293",
            "route_table_id": "rtb-09a2ec61f406a3420",
            "subnet_id": "subnet-015af137aeb579413"
          },
          "dependencies": [
            "aws_internet_gateway.sri_gt",
            "aws_route_table.sri_rt_public",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_subnets.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047e547b5f46343f1",
            "route_table_id": "rtb-09a2ec61f406a3420",
            "subnet_id": "subnet-080ca27468761bf62"
          },
          "dependencies": [
            "aws_internet_gateway.sri_gt",
            "aws_route_table.sri_rt_public",
            "aws_subnet.sri_sub",
            "aws_vpc.sri",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:security-group/sg-0c99c3275947336fe",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c99c3275947336fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "openall",
            "name_prefix": "",
            "owner_id": "694448848887",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysg"
            },
            "tags_all": {
              "Name": "mysg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-080ca27468761bf62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080ca27468761bf62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-015af137aeb579413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015af137aeb579413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-0772a3c32c7cb72d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0772a3c32c7cb72d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-0ea1eebc51f829b84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea1eebc51f829b84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-01c8d4e31491a2507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c8d4e31491a2507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:subnet/subnet-06c3d8519ae59e8bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c3d8519ae59e8bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "694448848887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "vpc_id": "vpc-08495a470b4c5281e"
          },
          "dependencies": [
            "aws_vpc.sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:694448848887:vpc/vpc-08495a470b4c5281e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c394e55be4548b6c",
            "default_route_table_id": "rtb-0d37bee7268a1a2fb",
            "default_security_group_id": "sg-059e2cd0623f2234b",
            "dhcp_options_id": "dopt-061196de37851fa13",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08495a470b4c5281e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d37bee7268a1a2fb",
            "owner_id": "694448848887",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}